src/assets/style.css
html,
body,
#app {
  width: 100%;
  height: 100%;

  font-family: "Bodoni";
}

@font-face {
  font-family: Bodoni;
  src: url(./fonts//LibreBodoni/LibreBodoni-VariableFont_wght.ttf);
}

@font-face {
  font-family: Montserrat;
  src: url(./fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
}

body {
  position: relative;
}

body::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: center / contain no-repeat url(./background_red.png);
  filter: saturate(150%);
  transform: scale(1.2) translate(max(-100px, -20%), 10%) rotate(10deg);
}

body::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: center / contain no-repeat url(./background_red.png);
  filter: hue-rotate(-30deg) saturate(150%);
  transform: scale(1.5) translate(max(5%, 10px), 12%) rotate(30deg);
  z-index: -1;
}

.bg-background {
  background-color: var(--q-background) !important;
  color: var(--q-background-text) !important;
}

.bg-transparent {
  background-color: transparent !important;
}

.bg-list-neutral {
  background-color: var(--q-list-neutral) !important;
}

.bg-primary {
  background-color: var(--q-primary) !important;
  color: var(--q-primary-text) !important;
}

.bg-secondary {
  background-color: var(--q-secondary) !important;
  color: var(--q-secondary-text) !important;
}

.q-chip__icon {
  color: inherit !important;
  opacity: 0.7;
}

.montserrat {
  font-family: 'Montserrat';
}

.text-primary-text {
  color: var(--q-primary-text) !important;
}

.text-secondary-text {
  color: var(--q-secondary-text) !important;
}

